Fix Of Gallery Font Spacing
Testing a fix to the gallery font spacing on mobile viewport widths, as it appears to cause other elements to overlap due to taking up too much space in its container.

--- a/stylesheets/gallerystyle.css
+++ b/stylesheets/gallerystyle.css
@@ -340,6 +340,11 @@ header {
         letter-spacing: 1rem;
         text-indent: 1rem;
     }
+
+    .mainitem h2, .mainitem h3, .mainitem h4 {
+        letter-spacing: 0;
+        text-indent: 0;
+    }
 }
 
 @media all and (max-width:570px) {
